fix spacing on collections landing page

--- a/public/css/collection-view.css
+++ b/public/css/collection-view.css
@@ -20,7 +20,7 @@
 }
 
 .collection-view__tabs {
-  margin-top: 60px;
+  margin-top: 30px;
 }
 
 .collection-view__banner-overlay-label {
